Added Delete Route, Updated Swagger
