# routes/meme.js
@@ -1,6 +1,6 @@
 const express = require('express');
 var router = express.Router();
-const {getMemes, postMeme, getMemeById, updateMeme, getSingleMeme} = require("../controllers/meme");
+const {getMemes, postMeme, getMemeById, updateMeme, getSingleMeme, deleteMeme} = require("../controllers/meme");
 const {check, validationResult} = require("express-validator");
 
 
@@ -10,20 +10,22 @@ router.get("/memes/:memeId", getSingleMeme);
 
 router.patch("/memes/:memeId", 
 [
-    check("name", "Max length for name is 32 characters and min is 1").optional().isLength({max: 32, min: 1}),
-    check("caption", "Max Length for caption is 70 characters and min is 1").optional().isLength({max: 70, min: 1}),
-    check("url", "URL is invalid").optional().isURL()
+    check("name", "Max length for name is 32 characters and min is 1").optional().trim().isLength({max: 32, min: 1}),
+    check("caption", "Max Length for caption is 70 characters and min is 1").optional().trim().isLength({max: 70, min: 1}),
+    check("url", "URL is invalid").optional().trim().isURL()
 ]
 ,updateMeme);
+
+router.delete("/memes/:memeId", deleteMeme);
 
 
 router.get("/memes", getMemes);
 
 router.post("/memes", 
 [
-    check("name", "Max length for name is 32 characters").isLength({max: 32}),
-    check("caption", "Max Length for caption is 70 characters").isLength({max: 70}),
-    check("url", "URL is invalid").isURL()
+    check("name", "Max length for name is 32 characters").trim().isLength({max: 32}),
+    check("caption", "Max Length for caption is 70 characters").trim().isLength({max: 70}),
+    check("url", "URL is invalid").trim().isURL()
 ],
 postMeme);
 
